P21-T06 add allowlisted server folder browser
